feat: Implementação dos testes de unidade novos e ampliação do escopo de testes