@@ -1,69 +1,63 @@
 package org.example.model.entity;
 
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+@DisplayName("Testes da Entidade Motorista")
 class MotoristaTest {
 
+    private Motorista motorista;
+
+    @BeforeEach
+    void setUp() {
+        motorista = new Motorista("Ana", "ana@gmail.com", "1234", "111.222.333-44", "83922222222");
+    }
+
     @Test
-    void testCriacaoMotorista() {
-        Motorista motorista = new Motorista(
-                "João Silva",
-                "joao@email.com",
-                "senha123",
-                "12345678900",
-                "11999999999"
-        );
-
-        // Verifica atributos herdados
-        assertEquals("João Silva", motorista.getNome());
-        assertEquals("joao@email.com", motorista.getEmail());
-        assertEquals("senha123", motorista.getSenha());
-        assertEquals("12345678900", motorista.getCpf());
-        assertEquals("11999999999", motorista.getTelefone());
-
+    @DisplayName("Deve criar o motorista como DISPONIVEL por padrão")
+    void testeConstrutor() {
+        assertEquals(MotoristaStatus.DISPONIVEL, motorista.getStatus());
         assertNotNull(motorista.getCorridasNotificadas());
-        assertTrue(motorista.getCorridasNotificadas().isEmpty());
         assertNotNull(motorista.getCorridasAceitas());
-        assertTrue(motorista.getCorridasAceitas().isEmpty());
     }
 
     @Test
-    void testSettersAndGetters() {
-        Motorista motorista = new Motorista("João", "email", "senha", "cpf", "tel");
+    @DisplayName("Deve adicionar corrida notificada à lista corretamente")
+    void testeAdicionarCorridaNotificada() {
+        Corrida corridaMock = new Corrida();
+        corridaMock.setId(99);
 
-        // Usando objeto Localizacao correto
-        Localizacao localizacao = new Localizacao(-23.5505, -46.6333);
-        localizacao.setDescricao("Centro");
-        motorista.setLocalizacao(localizacao);
-
-        motorista.setIdVeiculo(42);
-
-        assertEquals(localizacao, motorista.getLocalizacao());
-        assertEquals(42, motorista.getIdVeiculo());
-
-        ArrayList<Corrida> corridasAceitas = new ArrayList<>();
-        motorista.setCorridasAceitas(corridasAceitas);
-        assertEquals(corridasAceitas, motorista.getCorridasAceitas());
-    }
-
-    @Test
-    void testAdicionarCorridaNotificada() {
-        Motorista motorista = new Motorista("João", "email", "senha", "cpf", "tel");
-
-        Localizacao origem = new Localizacao(-23.5505, -46.6333);
-        origem.setDescricao("Centro");
-        Localizacao destino = new Localizacao(-23.4356, -46.4731);
-        destino.setDescricao("Aeroporto");
-
-        Corrida corrida = new Corrida(1, origem, destino, CategoriaVeiculo.UBER_X);
-
-        motorista.adicionarCorridaNotificada(corrida);
+        motorista.adicionarCorridaNotificada(corridaMock);
 
         assertEquals(1, motorista.getCorridasNotificadas().size());
-        assertEquals(corrida, motorista.getCorridasNotificadas().get(0));
+        assertEquals(99, motorista.getCorridasNotificadas().getFirst().getId());
+    }
+
+    @Test
+    @DisplayName("Deve validar Getters e Setters de Motorista")
+    void testeGettersESetters() {
+        Localizacao loc = new Localizacao(10.0, 20.0);
+        List<Corrida> aceitas = new ArrayList<>();
+        aceitas.add(new Corrida());
+
+        motorista.setChavePix("ana_pix");
+        motorista.setLocalizacao(loc);
+        motorista.setIdVeiculo(5);
+        motorista.setStatus(MotoristaStatus.EM_CORRIDA);
+        motorista.setCorridasAceitas(aceitas);
+
+        assertAll("Motorista Getters e Setters",
+                () -> assertEquals("ana_pix", motorista.getChavePix()),
+                () -> assertEquals(loc, motorista.getLocalizacao()),
+                () -> assertEquals(5, motorista.getIdVeiculo()),
+                () -> assertEquals(MotoristaStatus.EM_CORRIDA, motorista.getStatus()),
+                () -> assertEquals(1, motorista.getCorridasAceitas().size())
+        );
     }
 }
